@@ -1,3 +1,8 @@
+2003-04-03  Kevin Vandersloot <kfv101@psu.edu>
+
+	* drivemount.c: If the locale is not utf8 then convert the error string to utf8. Fixes 
+	bug #95480
+
 2003-03-30  Kevin Vandersloot <kfv101@psu.edu>
 
 	* properties.c: fix saving of custom icons. Fixes bug #90922
